add db con funcionalidades usando js

--- a/css/app.css
+++ b/css/app.css
@@ -35,8 +35,6 @@ img {
     font-weight: 800;
     margin: 5rem 0;
 }
-/*header*/
-
 .header{
     background-image:linear-gradient(to right ,rgb(0 0 0 / .7),rgb(0 0 0 /  .7)),url(../img/header.jpg);
     background-repeat: no-repeat;
@@ -382,30 +380,30 @@ td {
     display: grid;
     gap: 4rem;
 }
+.otro{
+    display: grid;
+    grid-template-columns: 2fr 3fr;
+    gap: 1.5rem;
+    align-items: center;
+}
 @media (min-width: 768px) {
     .otros__grid{
         grid-template-columns:repeat(3, 1fr);
         gap:1.5rem;
     }
 }
-.bajo{
-    display: grid;
-    grid-template-columns: 2fr 3fr;
-    gap: 1.5rem;
-    align-items: center;
-}
-.bajo__nombre{
+.otro__nombre{
     text-transform:uppercase ;
     font-size: 4rem;
     font-weight: 800;
 }
-.bajo__costo{
+.otro__costo{
     color:var(--primario);
     font-size: 6rem;
     font-weight: 900;
     margin: 0.5rem;
 }
-.bajo__enlace{
+.otro__enlace{
     all: unset;
     display: block;
     text-transform: uppercase;
@@ -418,88 +416,10 @@ td {
     transition-duration: .5s;
     cursor: pointer;
 }
-.bajo__enlace:hover{
+.otro__enlace:hover{
     background-color: var(--secundario);
     color: var(--blanco);
 }
-.saxofon{
-    display: grid;
-    grid-template-columns: 2fr 3fr;
-    gap: 1.5rem;
-    align-items: center;
-}
-.saxofon__nombre{
-    text-transform:uppercase ;
-    font-size: 4rem;
-    font-weight: 800;
-}
-.saxofon__costo{
-    color:var(--primario);
-    font-size: 6rem;
-    font-weight: 900;
-    margin: 0.5rem;
-}
-.saxofon__enlace{
-    all: unset;
-    display: block;
-    text-transform: uppercase;
-    font-size: 1.2rem;
-    font-weight: 800;
-    padding: 1rem 5rem;
-    text-align: center;
-    border: 2px solid var(--primario);
-    transition-property:background-color ;
-    transition-duration: .5s;
-    cursor: pointer;
-}
-.saxofon__enlace:hover{
-    background-color: var(--secundario);
-    color: var(--blanco);
-}
-.piano{
-    display: grid;
-    grid-template-columns: repeat(2 , 1fr);
-    place-items: center;
-}
-@media (min-width: 768px) {
-    .piano{
-        grid-template-columns: 1fr;
-        margin-left:4rem;
-    }
-}
-.piano__nombre{
-    text-transform:uppercase ;
-    font-size: 4rem;
-    font-weight: 800;
-    margin: 1rem 0;
-}
-.piano__subtitulo{
-    margin: 0;
-}
-.piano__costo{
-    color:var(--primario);
-    font-size: 6rem;
-    font-weight: 900;
-    margin: 0.5rem;
-}
-.piano__enlace{
-    all: unset;
-    display: block;
-    text-transform: uppercase;
-    font-size: 1.2rem;
-    font-weight: 800;
-    padding: 1rem 5rem;
-    text-align: center;
-    border: 2px solid var(--primario);
-    transition-property:background-color ;
-    transition-duration: .5s;
-    cursor: pointer;
-}
-.piano__enlace:hover{
-    background-color: var(--secundario);
-    color: var(--blanco);
-}
-
 /*curso*/
 .cursos{
     margin:4rem auto ;
